# project-examer

./: .gitignore  BUILD_SUCCESS.md  CONFIGURATION.md  Cargo.toml  LICENSE  README.md  config.toml
docs/: IMPROVEMENTS.md
example-output/: analysis_report.html  analysis_report.json  analysis_summary.md
examples/: config_example.rs
src/: analyzer.rs  config.rs  dependency_graph.rs  file_discovery.rs  lib.rs  llm.rs  main.rs  reporter.rs  simple_parser.rs
