[package]
name = "project-examer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.4"
regex = "1.10"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
ignore = "0.4"
petgraph = "0.6"
uuid = { version = "1.0", features = ["v4"] }
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "config_example"
path = "examples/config_example.rs"
