[package]
name = "project-examer"
version = "0.2.1"
edition = "2021"
description = "A fast system analysis tool for scanning codebases and building intelligent relationships between files using AST parsing and LLM analysis"
license = "MIT"
authors = ["Cody Averett <codyaverett@gmail.com>"]
repository = "https://github.com/codyaverett/project-examer"
homepage = "https://github.com/codyaverett/project-examer"
documentation = "https://docs.rs/project-examer"
readme = "README.md"
keywords = ["analysis", "codebase", "ast", "llm", "dependencies"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.4"
regex = "1.10"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
ignore = "0.4"
petgraph = "0.6"
uuid = { version = "1.0", features = ["v4"] }
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "config_example"
path = "examples/config_example.rs"
